WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150699
REGRESSION (
r191691
): Unexpected "Share" context menu when right clicking around inspector
https://bugs.webkit.org/show_bug.cgi?id=150699
Summary
REGRESSION (r191691): Unexpected "Share" context menu when right clicking aro...
Joseph Pecoraro
Reported
2015-10-29 16:36:10 PDT
* SUMMARY REGRESSION (
r191691
): Unexpected "Share" context menu when right clicking around inspector * STEPS TO REPRODUCE 1. Inspect about:blank 2. Right click in Toolbar area (at the top) => unexpected "Share" menu * NOTES Regression appeared with:
http://trac.webkit.org/changeset/191691
bug 150578
.
Attachments
Patch
(1.44 KB, patch)
2015-10-30 10:53 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-10-29 16:36:58 PDT
<
rdar://problem/23324522
>
Anders Carlsson
Comment 2
2015-10-30 10:53:09 PDT
Created
attachment 264402
[details]
Patch
Anders Carlsson
Comment 3
2015-10-30 10:59:36 PDT
Committed
r191798
: <
http://trac.webkit.org/changeset/191798
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug