REGRESSION (r191691): Unexpected "Share" context menu when right clicking around inspector https://bugs.webkit.org/show_bug.cgi?id=150699 rdar://problem/23324522

Reviewed by Tim Horton.

Don't create a share menu item if we have nothing to share.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::createShareMenuItem):

Canonical link: https://commits.webkit.org/168897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191798 268f45cc-cd09-0410-ab3c-d52691b4dbfc